<resources>
    <string name="app_name">TripLogger</string>
    <!--For the Trip Details and Trip Details Activities -->
    <string name="trip_title">Title of Holiday</string>
    <string name="trip_date">Date</string>
    <string name="date_picker_title">Date of Trip:</string>
    <string name="trip_type">Trip Type</string>
    <string-array name="trip_types">
        <item>Work</item>
        <item>Personal</item>
        <item>Commute</item>
    </string-array>
    <string name="destination">Destination</string>
    <string name="duration">Duration</string>
    <string name="comment">Comment</string>
    <string name="gps_location">View Map</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="log_button">Log</string>
    <string name="setting_button">Settings</string>
    <string name="delete_button">Delete</string>
    <!-- For the User Profile Activity(Setting) -->
    <string name="settings_title">User Profile</string>
    <string name="settings_name">Name :</string>
    <string name="settings_id">ID :</string>
    <string name="settings_email">E-Mail :</string>
    <string name="settings_gender">Gender :</string>
    <string name="settings_comment">Comment :</string>
</resources>
