<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginRight="16dp"
              android:layout_marginLeft="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:id="@+id/settings_title_text_view"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_name"
            android:id="@+id/settings_name_text_view"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_name_edit_text"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_id"
            android:id="@+id/settings_id_text_view"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_id_edit_text"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_email"
            android:id="@+id/settings_email_text_view"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_email_edit_text"
            android:layout_weight="1"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_gender"
            android:id="@+id/settings_gender_text_view"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_gender_edit_text"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_comment"
            android:id="@+id/settings_comment_text_view"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_comment_edit_text"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

</LinearLayout>